<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">WordPress</string>
    <string name="xmlrpc_missing_method_error">Couldn\'t connect. Required XML-RPC methods are missing on the server.</string>
    <string name="xmlrpc_post_blocked_error">Couldn\'t connect. Your host is blocking POST requests, and the app needs
        that in order to communicate with your site. Contact your host to solve this problem.</string>
    <string name="xmlrpc_endpoint_forbidden_error">Couldn\'t connect. We received a 403 error when trying to access your
        site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve
        this problem.</string>
    <string name="no_network_title">No network available</string>
    <string name="no_network_message">There is no network available</string>
    <string name="sign_out_wpcom_confirm_with_changes">You have changes to posts that haven’t been uploaded to your site. Logging out now will delete those changes from your device. Log out anyway?</string>
    <string name="sign_out_wpcom_confirm_with_no_changes">Log out of WordPress?</string>
    <string name="select_categories">Select categories</string>
    <string name="tags_separate_with_commas">Separate tags with commas</string>
    <string name="max_thumbnail_px_size">Maximum Image Size</string>
    <string name="image_quality">Image Quality</string>
    <string name="max_video_resolution">Maximum Video Size</string>
    <string name="video_quality">Video Quality</string>
    <string name="password">Password</string>
    <string name="anonymous">Anonymous</string>
    <string name="release_notes_screen_title">Release notes</string>
    <string name="license_screen_title">License</string>
    <string name="help_screen_title">Help and Support</string>
    <string name="notif_settings_screen_title">Notification settings</string>
    <string name="my_site_section_screen_title">My site</string>
    <string name="me_section_screen_title">Me</string>
    <string name="reader_screen_title">Reader</string>
    <string name="notifications_screen_title">Notifications</string>
    <string name="publicize_buttons_screen_title">Sharing buttons</string>
    <string name="media_settings_screen_title">File details</string>
    <string name="person_detail_screen_title">Person detail</string>
    <string name="login_epilogue_screen_title">Logged in as</string>
    <string name="login_prologue_screen_title">Login</string>
    <string name="signup_epilogue_screen_title">New account</string>
    <string name="share_intent_screen_title">Pick site</string>
    <string name="edit_photo_screen_title">Edit Photo</string>
    <string name="notif_detail_screen_title">Notification detail %s</string>
    <string name="wordpress" translatable="false">WordPress</string>
    <string name="posts">Posts</string>
    <string name="sites">Sites</string>
    <string name="media">Media</string>
    <string name="themes">Themes</string>
    <string name="about_the_app">About the app</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="keep_editing">Keep editing</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>
    <string name="search">Search</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="sure_to_remove_account">Remove this site from the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_to_server_lost">The connection to the server was lost</string>
    <string name="category_refresh_error">Category refresh error</string>
    <string name="incorrect_credentials">Incorrect username or password.</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="gallery_error">The media item couldn\'t be retrieved</string>
    <string name="refresh">Refresh</string>
    <string name="report_bug">Report bug</string>
    <string name="blog_not_found">An error occurred when accessing this blog</string>
    <string name="post_not_found">An error occurred when loading the post. Refresh your posts and try again.</string>
    <string name="sign_in">Log in</string>
    <string name="signing_out">Logging out…</string>
    <string name="sign_in_wpcom">Log in to WordPress.com</string>
    <string name="learn_more">Learn more</string>
    <string name="uploading_post">Uploading \"%s\"</string>
    <string name="language">Language</string>
    <string name="interface_language">Interface Language</string>
    <string name="signout">Log out</string>
    <string name="undo">Undo</string>
    <string name="never">Never</string>
    <string name="unknown">Unknown</string>
    <string name="off">Off</string>
    <string name="could_not_load_page">Could not load page</string>
    <string name="send">Send</string>
    <string name="swipe_for_more">Swipe for more</string>
    <string name="confirm">Confirm</string>
    <string name="cant_open_url">Unable to open the link</string>
    <string name="retry">Retry</string>
    <string name="invalid_ip_or_range">Invalid IP or IP range</string>
    <string name="copy">Copy</string>
    <string name="error_please_choose_browser">Error opening the default web browser. Please choose another app:</string>
    <string name="delete_yes">Delete</string>
    <string name="add_count">Add %d</string>
    <string name="preview_count">Preview %d</string>
    <string name="write_post">Write Post</string>
    <string name="dismiss">dismiss</string>
    <string name="exit">exit</string>
    <string name="ok">OK</string>
    <string name="site_cannot_be_loaded">We cannot load the data for your site right now. Please try again later</string>
    <string name="button_not_now">Not now</string>
    <string name="latitude_longitude">%1$f, %2$f</string>
    <string name="author_name_blog_name">%1$s, %2$s</string>
    <string name="at_username">\@%s</string>
    <string name="cab_selected">%d selected</string>
    <string name="media_all">All</string>
    <string name="media_images">Images</string>
    <string name="media_documents">Documents</string>
    <string name="media_videos">Videos</string>
    <string name="media_audio">Audio</string>
    <string name="media_gallery_column_count_single">1 column</string>
    <string name="media_gallery_column_count_multi">%d columns</string>
    <string name="media_gallery_type_thumbnail_grid">Thumbnail grid</string>
    <string name="media_gallery_type_squares">Squares</string>
    <string name="media_gallery_type_tiled">Tiled</string>
    <string name="media_gallery_type_circles">Circles</string>
    <string name="media_gallery_type_slideshow">Slideshow</string>
    <string name="media_insert_title">Add multiple photos</string>
    <string name="media_insert_individually">Add individually</string>
    <string name="media_insert_as_gallery">Add as gallery</string>
    <string name="media_downloading">Saving media to this device</string>
    <string name="wp_media_title">WordPress media</string>
    <string name="pick_photo">Select photo</string>
    <string name="remove_image_from_post">Remove from post</string>
    <string name="mnu_comment_approve">Approve</string>
    <string name="mnu_comment_unapprove">Unapprove</string>
    <string name="mnu_comment_spam">Spam</string>
    <string name="mnu_comment_trash">Trash</string>
    <string name="trash">Trash</string>
    <string name="share_link">Share link</string>
    <string name="view_in_browser">View in browser</string>
    <string name="share_action">Share</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="notifications_tab">Notifications tab</string>
    <string name="notifications_tab_dialog_master_status_on">Notifications for this site</string>
    <string name="notifications_tab_dialog_master_status_off">Notifications for this site</string>
    <string name="notifications_tab_dialog_master_hint_on">Disable notifications display on notifications tab for this site</string>
    <string name="notifications_tab_dialog_master_hint_off">Enable notifications display on notifications tab for this site</string>
    <string name="post_settings">Post settings</string>
    <string name="post_settings_time_and_date">Time and Date</string>
    <string name="post_settings_notification">Notification</string>
    <string name="post_settings_add_to_calendar">Add to calendar</string>
    <string name="post_notification_off">Off</string>
    <string name="immediately">Immediately</string>
    <string name="post_status_publish_post">Publish</string>
    <string name="menu_save_as_draft">Save as Draft</string>
    <string name="menu_preview">Preview</string>
    <string name="menu_html_mode">HTML Mode</string>
    <string name="reader_menu_tags">Edit tags and sites</string>
    <string name="tabbar_accessibility_label_my_site">My Site. View your site and manage it, including stats.</string>
    <string name="tabbar_accessibility_label_me">Me. View your profile and make changes.</string>
    <string name="tabbar_accessibility_label_write">New post. Write a new post.</string>
    <string name="tabbar_accessibility_label_reader">Reader. Follow content from other sites.</string>
    <string name="tabbar_accessibility_label_notifications">Notifications. Manage your notifications.</string>
    <string name="sharing_disabled">Sharing module disabled</string>
    <string name="sharing_disabled_description">You cannot access your sharing settings because your Sharing Jetpack module is disabled.</string>
    <string name="site_settings_reblog_and_like_header">Reblog &amp; Like</string>
    <string name="site_settings_reblog">Show Reblog Button</string>
    <string name="site_settings_like">Show Like Button</string>
    <string name="sharing_buttons">Sharing buttons</string>
    <string name="label">Label</string>
    <string name="button_style">Button Style</string>
    <string name="sharing_comment_likes">Comment Likes</string>
    <string name="twitter_username">Twitter Username</string>
    <string name="sharing_sharing_buttons_description">Select which buttons are shown under your posts</string>
    <string name="sharing_more_description">A \"More\" button contains a dropdown which displays sharing buttons</string>
    <string name="sharing_edit_more_buttons">Edit \"More\" Buttons</string>
    <string name="buttons">Buttons</string>
    <string name="sharing_comment_likes_description">Allow all comments to be Liked by you and your readers</string>
    <string name="likes">Likes</string>
    <string name="twitter">Twitter</string>
    <string name="sharing_label_message">Change the text of the sharing buttons\' label. This text won\'t appear until you add at least one sharing button.</string>
    <string name="sharing_twitter_message">This will be included in tweets when people share using the Twitter button</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="public_display_name">Public display name</string>
    <string name="about_me">About me</string>
    <string name="notifications_tab_dialog_switch_desc">Notifications</string>
    <string name="pages_view">View</string>
    <string name="pages_set_parent">Set parent</string>
    <string name="pages_publish_now">Publish Now</string>
    <string name="pages_move_to_draft">Move to Draft</string>
    <string name="pages_move_to_trash">Move to Trash</string>
    <string name="pages_delete_permanently">Delete Permanently</string>
</resources>