<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <org.wordpress.android.widgets.WPTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/notifications_tab"
            android:textStyle="bold"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:layout_marginStart="24dip"
            android:layout_marginEnd="6dip"/>

        <org.wordpress.android.ui.prefs.notifications.PrefMasterSwitchToolbarView
            android:id="@+id/master_switch"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:masterTitleOn="@string/notifications_tab_dialog_master_status_on"
            app:masterTitleOff="@string/notifications_tab_dialog_master_status_off"
            app:masterHintOn="@string/notifications_tab_dialog_master_hint_on"
            app:masterHintOff="@string/notifications_tab_dialog_master_hint_off"
            app:masterContentDescription="@string/notifications_tab_dialog_switch_desc"
            app:masterContentInsetStart="@dimen/notifications_tab_dialog_toolbar_content_offset">
        </org.wordpress.android.ui.prefs.notifications.PrefMasterSwitchToolbarView>

</LinearLayout>

