<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/ic_trash_white_24dp"
        android:title="@string/trash"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_download_white_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share_link"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_remove_image"
        android:icon="@drawable/ic_image_remove_white_24dp"
        android:title="@string/remove_image_from_post"
        app:showAsAction="ifRoom"/>
</menu>
