<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_browser"
        android:icon="@drawable/ic_action_web_site"
        app:showAsAction="ifRoom"
        android:title="@string/view_in_browser"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom"
        android:title="@string/share_link"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never"
        android:title="@string/settings"/>
    <item
            android:id="@+id/menu_signout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            app:showAsAction="never"
            android:title="@string/sign_out"/>
</menu>