<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.wordpress.android.widgets.WPTextView
        android:id="@+id/first_name"
        style="@style/MyProfileLabel"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/first_name" />

    <View style="@style/MyProfileDividerView" />

    <org.wordpress.android.widgets.WPTextView
        android:id="@+id/last_name"
        style="@style/MyProfileLabel"
        android:text="@string/last_name" />

    <View style="@style/MyProfileDividerView" />

    <org.wordpress.android.widgets.WPTextView
        android:id="@+id/display_name"
        style="@style/MyProfileLabel"
        android:text="@string/public_display_name" />

    <View style="@style/MyProfileDividerView" />

    <org.wordpress.android.widgets.WPTextView
        android:id="@+id/about_me"
        style="@style/MyProfileLabel"
        android:text="@string/about_me" />

    <View style="@style/MyProfileDividerView" />

</LinearLayout>