<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent" >

    <android.support.v7.widget.CardView
        android:id="@+id/sharing_disabled_notification"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="gone" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginEnd="@dimen/content_margin"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingEnd="@dimen/margin_medium"
            android:paddingStart="@dimen/margin_medium" >

            <org.wordpress.android.widgets.WPTextView
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_width="wrap_content"
                android:text="@string/sharing_disabled"
                android:textColor="@color/blue_wordpress"
                android:textSize="@dimen/text_sz_medium"
                android:textStyle="bold" >
            </org.wordpress.android.widgets.WPTextView>

            <org.wordpress.android.widgets.WPTextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/sharing_disabled_description"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_sz_medium" >
            </org.wordpress.android.widgets.WPTextView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/sharing_settings_wrapper"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/cardview_default_radius" >

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_extra_large"
                    android:layout_width="match_parent"
                    android:orientation="vertical" >

                    <org.wordpress.android.widgets.WPPrefView
                        android:id="@+id/pref_sharing_buttons"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:wpHeading="@string/buttons"
                        app:wpPrefType="checklist"
                        app:wpShowDivider="true"
                        app:wpSummary="@string/sharing_sharing_buttons_description"
                        app:wpTitle="@string/sharing_buttons" >
                    </org.wordpress.android.widgets.WPPrefView>

                    <org.wordpress.android.widgets.WPPrefView
                        android:id="@+id/pref_more_button"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:wpPrefType="checklist"
                        app:wpShowDivider="true"
                        app:wpSummary="@string/sharing_more_description"
                        app:wpTitle="@string/sharing_edit_more_buttons" >
                    </org.wordpress.android.widgets.WPPrefView>

                    <org.wordpress.android.widgets.WPPrefView
                        android:id="@+id/pref_label"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:wpPrefType="text"
                        app:wpShowDivider="true"
                        app:wpTextDialogSubtitle="@string/sharing_label_message"
                        app:wpTitle="@string/label" >
                    </org.wordpress.android.widgets.WPPrefView>

                    <org.wordpress.android.widgets.WPPrefView
                        android:id="@+id/pref_button_style"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:wpPrefType="radiolist"
                        app:wpShowDivider="false"
                        app:wpTitle="@string/button_style" >
                    </org.wordpress.android.widgets.WPPrefView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/cardview_default_radius" >

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_extra_large"
                    android:layout_width="match_parent"
                    android:orientation="vertical" >

                    <org.wordpress.android.widgets.WPPrefView
                        android:id="@+id/pref_show_reblog"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:wpHeading="@string/site_settings_reblog_and_like_header"
                        app:wpPrefType="toggle"
                        app:wpShowDivider="true"
                        app:wpTitle="@string/site_settings_reblog" >
                    </org.wordpress.android.widgets.WPPrefView>

                    <org.wordpress.android.widgets.WPPrefView
                        android:id="@+id/pref_show_like"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:wpPrefType="toggle"
                        app:wpShowDivider="false"
                        app:wpTitle="@string/site_settings_like" >
                    </org.wordpress.android.widgets.WPPrefView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/cardview_default_radius" >

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_extra_large"
                    android:layout_width="match_parent"
                    android:orientation="vertical" >

                    <org.wordpress.android.widgets.WPPrefView
                        android:id="@+id/pref_allow_comment_likes"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:wpHeading="@string/likes"
                        app:wpPrefType="toggle"
                        app:wpShowDivider="false"
                        app:wpSummary="@string/sharing_comment_likes_description"
                        app:wpTitle="@string/sharing_comment_likes" >
                    </org.wordpress.android.widgets.WPPrefView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/app_twitter"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/cardview_default_radius" >

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_extra_large"
                    android:layout_width="match_parent"
                    android:orientation="vertical" >

                    <org.wordpress.android.widgets.WPPrefView
                        android:id="@+id/pref_twitter_name"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:wpHeading="@string/twitter"
                        app:wpPrefType="text"
                        app:wpShowDivider="false"
                        app:wpTextDialogSubtitle="@string/sharing_twitter_message"
                        app:wpTitle="@string/twitter_username" >
                    </org.wordpress.android.widgets.WPPrefView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
