<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_tags"
        android:icon="@drawable/ic_action_tag"
        app:showAsAction="always"
        android:title="@string/reader_menu_tags" />

    <item
        android:id="@+id/menu_refresh"
        app:showAsAction="never"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never"
        android:title="@string/settings" />

    <item
        android:id="@+id/menu_signout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="never"
        android:title="@string/sign_out" />

</menu>